--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,33 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
+
+
 <body>
-
-<div>
-    <form  method="post">
-        <input type="text" name="text" placeholder="Введите сообщение">
-        <input type="text" name="tag" placeholder="Тэг">
-        <button type="submit">Добавить</button>
-    </form>
-</div>
-
-<div> Список сообщений </div>
-<form  method="post" action="filter">
-    <input type="text" name="filter" >
-    <button type="submit">Найти</button>
-</form>
-
-    {{#messages}}
-        <div>
-            <b>{{id}}</b>
-            <span>{{text}}</span>
-            <i>{{tag}}</i>
-            <form  method="put">
-            <button type="submit">Удалить</button>
+    <div>
+        <form action="/logout" method="post">
+             <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+            <input type="submit" value="Sign Out">
         </form>
-        </div>
+    </div>
+    <div>
+        <form method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+            <label> <input  type="text" name="text" placeholder="Введите сообщение"> </label>
+            <label> <input type="text" name="tag" placeholder="Тэг"> </label>
+            <button type="submit">Добавить</button>
+        </form>
+    </div>
+    <div> Список сообщений</div>
+    <form method="post" action="filter">
+          <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+        <label><input type="text" name="filter"></label>
+          <button type="submit">Найти</button>
+    </form>
+        {{#messages}}
+            <div>
+                <b>{{id}}</b>
+                <span>{{text}}</span>
+                <i>{{tag}}</i>
+            </div>
         {{/messages}}
-
-
-
 </body>
 </html>
